Endret på IT-delen

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -123,8 +123,8 @@
                 <div class = "fag-info">
                     <!-- Endre info/tittel her -->
                     <h3 class="fag-tittel">IT</h3>
-                    <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
-                    <p class="fag-sitat"></p>
+                    <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra grunnleggende programmering til spillutvikling. Vi bruker mye tid på å jobbe med egne IT-prosjekter.</p>
+                    <p class="fag-sitat">“Most of the good programmers do programming not because they expect to get paid or get adulation by the public, but because it is fun to program.” — Linus Torvalds, software engineer, inventor of the Linux operating system</p>
                     <a class ="fag-se-mer-knapp" href="../realfag/programfag/informasjonsteknologi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/informasjonsteknologi/kode.png" class="fag-bilde">
