Oppdatering av IT-siden pågår

--- a/realfag/programfag/informasjonsteknologi/index.html
+++ b/realfag/programfag/informasjonsteknologi/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                TODO: Skriv en kort tekst om programfaget informasjonsteknologi her.
+                I informasjonsteknologi (IT) lærer elevene programmering og  systemutvikling, samt forståelse for hvordan IT påvirker mennesker og samfunnet. Dette styrker elevenes digitale kompetanse og forbereder dem på fremtidige studier og jobber. 
             </p>
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
@@ -49,15 +49,17 @@
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>PHP & MySQL</li>
+                            <li>JavaScript</li>
                         </ul>
                         <li>Nettsidedesign</li>
                         <ul>
                             <li>Universiell utforming</li>
                             <li>Brukervennlig design</li>
+                            <li>Responsive nettsider</li>
                         </ul>
                         <li>Hvordan internett og datamaskiner fungerer</li>
+                        <li>Dagsaktuelle temaer om hvordan IT påvirker samfunnet</li>
+                        <li>Datalagring og presentasjon</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -66,7 +68,7 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        TODO
+                        IT1 
                     </p>
                     <p>
                         TODO
@@ -84,18 +86,18 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            TODO
+                            /* No comment */
                         </i>
                     </p>
                     <p>
-                        - TODO
+                        - javaScript
                     </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
                     <li><a href="https://snl.no/IT" target="_blank">SNL</a></li>
                     <li><a href="https://www.udir.no/lk20/inf01-02/" target="_blank">Læreplan</a></li>
-                    <li><a href="https://denlilledatasiden.no/" target="_blank">Noen IT1 projekter</a></li>
+                    <li><a href="https://it1-julekalenderen.w3spaces.com/" target="_blank">IT1-projekt desember 2024</a></li>
 
                 </div>
                 <!-- legg til interaktivt element her -->
@@ -117,7 +119,7 @@
                     <h3>Rask oversikt</h3>
                     <li>Realfagspoeng: <b>0.5</b></li>
                     <li>Eksamensform: <b>Skriftlig eller muntlig-praktisk.</b></li>
-                    <li>Bygger på andre fag: <b>Ja, IT1. Men mulig å ta om du kan programmering fra før.</b></li>
+                    <li>Bygger på andre fag: <b>Ja, IT1. Men det er mulig å ta IT2 uten å ta IT1 først om du kan programmering fra før.</b></li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
@@ -129,7 +131,7 @@
                             <li>Javascript (om du vil)</li>
                         </ul>
                         <li>Objektorientert programmering</li>
-                        <li>Databehandling og jobbe med store datasett</li>
+                        <li>Databehandling og store datasett</li>
                         <li>Spillutvikling og animasjoner</li>
                         <li>Systemutvikling og team-arbeid med github</li>
                         <li>Skaperverksted</li>
@@ -162,11 +164,11 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            TODO
+                            # No comment 
                         </i>
                     </p>
                     <p>
-                        - TODO
+                        - python
                     </p>
                 </div>
                 <div class="mer-informasjon">
@@ -187,7 +189,7 @@
         <!-- legg til flere prosjekter her -->
         <div class="flere-prosjekter">
             <h3>Flere prosjekter</h3>
-            <a href="https://it1-julekalenderen.w3spaces.com/" target="_blank" style="text-decoration: underline;">IT1 Julekalender</a>
+            <a href="https://it1-julekalenderen.w3spaces.com/" target="_blank" style="text-decoration: underline;">IT1 Julekalender 2024</a> <a href="https://denlilledatasiden.no/" target="_blank" style="text-decoration: underline;">IT1 Julekalender 2023</a>
         </div>
     </main>
     <!-- Footer -->
