Fikset e-sport og byttet om rekkefølge på fysikkspill
Bilder lagt til og gjorde sånn at pendel kommer før rakett

--- a/idrettsfag/programfag/esport/index.html
+++ b/idrettsfag/programfag/esport/index.html
@@ -33,7 +33,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Eksamensform: Ingen</li>
+                    <li>Eksamensform: Muntlig-praktisk</li>
                     <li>Bygger på andre fag: Nei</li>
                 </div>
                 <div class="sentrale-temaer">
@@ -49,15 +49,15 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/friluftsliv/telt.png" alt="Telt">
-                    <img src="../../../assets/imgs/friluftsliv/hav.png" alt="Bading i havet">
+                    <img src="../../../assets/imgs/e-sport/gaming1.png" alt="Folk som gamer">
+                    <img src="../../../assets/imgs/e-sport/gaming2.png" alt="Folk som gamer">
                 </div>
                 <div class="elev-sitat">
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/friluftsliv" target="_blank">Les mer på SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/fagkoder/idr3019?lang=nob" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/e-sport" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/idr05-02" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
