--- a/mk/index.html
+++ b/mk/index.html
@@ -73,13 +73,8 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/medieutvikling/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/medieutvikling/forsidebilde.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Medieutvikling</p>
-                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="../mk/programfag/mediespesialisering/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Mediespesialisering</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
             </div>
@@ -108,6 +103,51 @@
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="../assets/imgs/" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel"></h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel"></h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                </div>
+                <img src="../assets/imgs/" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="../assets/imgs/" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel"></h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel"></h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                </div>
+                <img src="../assets/imgs/" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="../assets/imgs/medieutvikling/forsidebilde.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Medieutvikling</h3>
+                    <p class="fag-beskrivelse">Idéutvikling - Medieteknologi - Konseptutvikling - AI</p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                </div>
             </div>
         </div>
     </main>
