--- a/mk/index.html
+++ b/mk/index.html
@@ -42,39 +42,44 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../mk/programfag/foto/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Bilde (foto)</p>
-                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="../mk/programfag/film/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Bilde (film)</p>
-                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="../mk/programfag/vfx/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Bilde (VFX animasjon)</p>
+                <a href="../mk/programfag/bilde/" class="fag_i_meny">
+                    <img src="../assets/imgs/bilde/banner.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Bilde (film, foto og VFX)</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/grafisk_design/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/bilde/banner.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Grafisk design</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/lyddesign/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/bilde/banner.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Lyddesign</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/tekst/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/tekst/banner.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Tekst - Journalistikk, manus og tekstforfatter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/medieutvikling/" class="fag_i_meny">
                     <img src="../assets/imgs/medieutvikling/forsidebilde.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Medieutvikling</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../mk/programfag/design_og_bærekraft/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Design og bærekraft</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../mk/programfag/foto_og_grafikk/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Foto og grafikk</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../mk/programfag/mediespesialisering/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Mediespesialisering</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
             </div>
