--- a/mk/programfag/bilde/index.html
+++ b/mk/programfag/bilde/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../style/global.css">
     <link rel="stylesheet" href="../../../style/programfag.css">
-    <link rel="stylesheet" href="../../../style/ssø.css">
+    <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./bilde.css">
     <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Bilde: film, foto og VFX</title>
