Bilder til grafisk

--- a/mk/programfag/bilde/index.html
+++ b/mk/programfag/bilde/index.html
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div class="nyttig-fordi">
-                    <h3>Faget er nyttig fordi</h3>
+                    <h3>Fagene er nyttig fordi</h3>
                     <ul>
                         <li>Du uttrykker deg visuelt</li>
                         <li>Du presenterer egne tanker og ideer</li>
@@ -79,8 +79,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Maleri av folk i cafe">
-                    <img src="../../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Maleri av en blond jente">
+                    <img src="../../../assets/imgs/bilde/bilde1.jpg" alt="Folk som tar bilder.">
+                    <img src="../../../assets/imgs/bilde/bilde3.jpg" alt="Person tom konsentrert tar bilde.">
                 </div>
                 <div class="elev-sitat">
                 </div>
