--- a/mk/programfag/grafisk_design/index.html
+++ b/mk/programfag/grafisk_design/index.html
@@ -77,8 +77,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Maleri av folk i cafe">
-                    <img src="../../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Maleri av en blond jente">
+                    <img src="../../../assets/imgs/grafisk_design/image.crop.png" alt="Maleri av folk i cafe">
+                    <img src="../../../assets/imgs/grafisk_design/apps.png" alt="Maleri av en blond jente">
                 </div>
                 <div class="elev-sitat">
                 </div>
