--- a/mk/index.html
+++ b/mk/index.html
@@ -58,7 +58,7 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/tekst/" class="fag_i_meny">
-                    <img src="../assets/imgs/tekst/banner.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/tekst/dokument.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Tekst - Journalistikk, manus og tekstforfatter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -77,30 +77,30 @@
         <!-- For å fjerne fag, slett den "fag-element" diven du vil fjerne. -->
         <div id="fag-oversikt">
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/bilde/bilde2.jpg" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
-                    <p class="fag-beskrivelse"></p>
+                    <h3 class="fag-tittel">Bilde (film, foto og VFX)</h3>
+                    <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/bilde/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
-                    <p class="fag-beskrivelse"></p>
+                    <h3 class="fag-tittel">Grafisk design</h3>
+                    <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/grafisk_design/">Se mer →</a>
                 </div>
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/grafisk_design/ilustration.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/tekst/dokument.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
-                    <p class="fag-beskrivelse"></p>
+                    <h3 class="fag-tittel">Tekst - Journalistikk, manus og tekstforfatter</h3>
+                    <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/tekst/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
