--- a/mk/programfag/tekst/index.html
+++ b/mk/programfag/tekst/index.html
@@ -75,8 +75,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/kunst_og_skapende/cafe-maleri.jpg" alt="Maleri av folk i cafe">
-                    <img src="../../../assets/imgs/kunst_og_skapende/maleri-bold-jente.jpg" alt="Maleri av en blond jente">
+                    <img src="../../../assets/imgs/tekst/papirfly.png" alt="Maleri av folk i cafe">
+                    <img src="../../../assets/imgs/tekst/papir.png" alt="Maleri av en blond jente">
                 </div>
                 <div class="elev-sitat">
                 </div>
