--- a/mk/programfag/lyddesign/index.html
+++ b/mk/programfag/lyddesign/index.html
@@ -23,28 +23,28 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Idéutvikling - Medieteknologi - Konseptutvikling - AI
+                Kommunisere - Visualisere - Presentere
             </p>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
-            <h2>Medieutvikling</h2>
+            <h2>Lyddesign</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                    <li>Eksamensform: <b>Praktisk</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Dette lærer du</h3>
                     <ul>
-                        <li>Teknikker for å tenke kreativt</li>
-                        <li>Utforske og utvikle idéer</li>
-                        <li>Kommuinisere og pitche idéene dine til arbeidsgiverne</li>
-                        <li>Adobepakken</li>
-                        <li>Bruke nye AI-programmer og -verktøy</li>
+                        <li>Opptak og etterbehandling / postproduksjon</li>
+                        <li>Lyd og FX (spesialeffekter) til film / TV / radio / podcast</li>
+                        <li>Mikse, mastre, publisere lyd og PA, live mix</li>
+                        <li>Musikkproduksjon</li>
+                        <li>Å utrykke deg gjennom lyd med kreative og spennende virkemidler</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -53,37 +53,35 @@
                 <div class="dette-gjør-vi">
                     <h3>Dette gjør vi</h3>
                     <ul>
-                        <li>Lager prototyper til diverse medier som apper og websider</li>
-                        <li>Lager nye konsepter til serier, spill, apper osv.</li>
-                        <li>Produserer proffe pitcher til bransjen</li>
-                        <li>Visualiserer konsepter og ideer - både i 2D og 3D - både ved bruk av grafikk og animasjon</li>
-                        <li>Utforsker og leker med ny AI-programvare</li>
+                        <li>Utforsker og leker med lyd- og opptaksutstyr</li>
+                        <li>Planlegger og gjennomfører opptak</li>
+                        <li>Lager podcast, radio, reklame med mer</li>
+                        <li>Lydlegger for eksempel lyd og spill</li>
+                        <li>Mikser og mastrer lyd</li>
+                        <li>Ferdigstiller produksjoner på profesjonellt vis</li>
+                        <li>Jobber med eksterne oppdragsgivere</li>
                     </ul>
                 </div>
                 <div class="nyttig-fordi">
                     <h3>Faget er nyttig fordi</h3>
                     <ul>
-                        <li>Du utvikler din kreative evne</li>
-                        <li>Du lærer å utvikle idéer og konsepter</li>
-                        <li>Du blir flink til å pitche og selge inn idéer</li>
-                        <li>Du lærer teknikker for å visualisere idéer</li>
-                        <li>Du lærer å bruke Adobepakken</li>
-                        <li>Du lærer å bruke flere nyttige AI-verktøy</li>
-                        <li>Du lærer å skrive gode prompter/ledetekster </li>
+                        <li>Det er et sterkt selvstendig utrykk</li>
+                        <li>Lydproduksjon er essensielt i alle mediesjangere</li>
+                        <li>Det er alltid etterspørsel etter folk som kan lyd</li>
                     </ul>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/medieutvikling/prototyping.png" alt="Person som driver med prototyping">
-                    <img src="../../../assets/imgs/medieutvikling/ai.png" alt="AI">
+                    <img src="../../../assets/imgs/lyddesign/mixer.png" alt="Mixer">
+                    <img src="../../../assets/imgs/lyddesign/redigering.png" alt="Redigering">
                 </div>
                 <div class="elev-sitat">
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/medier_i_Norge" target="_blank">Les mer på SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/mok07-02" target="_blank">Læreplan</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=xgEtalBDsXs" target="_blank">YouTube-video</a></li>
+                    <li><a href="https://snl.no/lyd" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/mok05-02" target="_blank">Læreplan</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=1_LaMIg5Aio" target="_blank">YouTube-video</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
