--- a/mk/index.html
+++ b/mk/index.html
@@ -53,7 +53,7 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../mk/programfag/lyddesign/" class="fag_i_meny">
-                    <img src="../assets/imgs/bilde/banner.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/lyddesign/studio.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Lyddesign</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -95,22 +95,22 @@
                 <img src="../assets/imgs/grafisk_design/ilustration.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/tekst/dokument.png" class="fag-bilde">
+                <img src="../assets/imgs/lyddesign/studio.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Lyddesign</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/lyddesign/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Tekst - Journalistikk, manus og tekstforfatter</h3>
                     <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/tekst/">Se mer →</a>
                 </div>
-            </div>
-            <div class="fag-element">
-                <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
-                </div>
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/tekst/dokument.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="../assets/imgs/medieutvikling/forsidebilde.png" class="fag-bilde">
