Endret lyddesign-tekst på mk-side
Nå står det noe der

--- a/mk/index.html
+++ b/mk/index.html
@@ -98,7 +98,7 @@
                 <img src="../assets/imgs/lyddesign/studio.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Lyddesign</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Kommunisere - Visualisere - Presentere</p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/lyddesign/">Se mer →</a>
                 </div>
