--- a/ssø/programfag/språk3/index.html
+++ b/ssø/programfag/språk3/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../../style/global.css">
-    <link rel="stylesheet" href="../../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./språk3.css">
-    <link rel="icon" href="../../../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Språk 3</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Språk 3</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -82,8 +82,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../../assets/imgs/språk3/tysk-flagg.png" alt="Tysk flagg">
-                    <img src="../../../../assets/imgs/språk3/fransk-flagg.png" alt="Fransk flagg">
+                    <img src="../../../assets/imgs/språk3/tysk-flagg.png" alt="Tysk flagg">
+                    <img src="../../../assets/imgs/språk3/fransk-flagg.png" alt="Fransk flagg">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -104,7 +104,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../../../script/footer.js"></script>
-    <script src="../../../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
