Fikset paths med en for mye ../

--- a/realfag/programfag/geofag/index.html
+++ b/realfag/programfag/geofag/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../../style/global.css">
-    <link rel="stylesheet" href="../../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./geofag.css">
-    <link rel="icon" href="../../../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Geofag</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Geofag</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -65,8 +65,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../../assets/imgs/geofag/isbjørn.png" alt="Isbjørn">
-                    <img src="../../../../assets/imgs/geofag/vulkan.png" alt="Vulkan">
+                    <img src="../../../assets/imgs/geofag/isbjørn.png" alt="Isbjørn">
+                    <img src="../../../assets/imgs/geofag/vulkan.png" alt="Vulkan">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -80,7 +80,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../../../widgets/drag_and_drop_geofag_spill/index.html" width="100%" height="520" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/drag_and_drop_geofag_spill/index.html" width="100%" height="520" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -117,8 +117,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../../assets/imgs/geofag/tørke.png" alt="Tørke">
-                    <img src="../../../../assets/imgs/geofag/lyn.png" alt="Storm">
+                    <img src="../../../assets/imgs/geofag/tørke.png" alt="Tørke">
+                    <img src="../../../assets/imgs/geofag/lyn.png" alt="Storm">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -131,7 +131,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../../../widgets/geofag_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/geofag_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -146,7 +146,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../../../script/footer.js"></script>
-    <script src="../../../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
