--- a/ssø/programfag/engelsk/index.html
+++ b/ssø/programfag/engelsk/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../../style/global.css">
-    <link rel="stylesheet" href="../../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./engelsk.css">
-    <link rel="icon" href="../../../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Engelsk</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Engelsk</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -65,8 +65,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../../assets/imgs/engelsk/britainflag.png" alt="">
-                    <img src="../../../../assets/imgs/engelsk/goldengate.png" alt="">
+                    <img src="../../../assets/imgs/engelsk/britainflag.png" alt="">
+                    <img src="../../../assets/imgs/engelsk/goldengate.png" alt="">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hvorfor ta Engelsk 1?</h3>
@@ -125,8 +125,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../../assets/imgs/engelsk/buckinham.png" alt="buckingham palace">
-                    <img src="../../../../assets/imgs/engelsk/fone.png" alt="telefonkiosk">
+                    <img src="../../../assets/imgs/engelsk/buckinham.png" alt="buckingham palace">
+                    <img src="../../../assets/imgs/engelsk/fone.png" alt="telefonkiosk">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -142,7 +142,7 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../../../script/footer.js"></script>
-    <script src="../../../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
