--- a/ssø/programfag/sosiologi_og_sosialantropologi/index.html
+++ b/ssø/programfag/sosiologi_og_sosialantropologi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../../style/global.css">
-    <link rel="stylesheet" href="../../../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./sos.css">
-    <link rel="icon" href="../../../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Sosiologi & sosialantropologi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Sosiologi & sosialantropologi</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -111,8 +111,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Tegning barm som holder hender">
-                    <img src="../../../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Trist mann">
+                    <img src="../../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Tegning barm som holder hender">
+                    <img src="../../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Trist mann">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hvorfor velge sosiologi & sosialantropologi?</h3>
@@ -138,7 +138,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../../../script/footer.js"></script>
-    <script src="../../../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
