Fjernet ikke-eksisterende sitater og la til mer for testing av kjemi

--- a/mk/index.html
+++ b/mk/index.html
@@ -81,7 +81,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Bilde (film, foto og VFX)</h3>
                     <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/bilde/">Se mer →</a>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Grafisk design</h3>
                     <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/grafisk_design/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/grafisk_design/ilustration.png" class="fag-bilde">
@@ -99,7 +99,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Lyddesign</h3>
                     <p class="fag-beskrivelse">Kommunisere - Visualisere - Presentere</p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/lyddesign/">Se mer →</a>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Tekst - Journalistikk, manus og tekstforfatter</h3>
                     <p class="fag-beskrivelse">Kreative fag er fag for fremtiden. Med kreative fag blir du bedre til å uttrykke deg!</p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/tekst/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/tekst/dokument.png" class="fag-bilde">
@@ -117,7 +117,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Medieutvikling</h3>
                     <p class="fag-beskrivelse">Idéutvikling - Medieteknologi - Konseptutvikling - AI</p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
                 </div>
             </div>
