Fikset at mange overskrifter tilpasses mindre skjermer og tester mer kjemi-ting

--- a/ssø/programfag/entreprenørskap/index.html
+++ b/ssø/programfag/entreprenørskap/index.html
@@ -46,11 +46,11 @@
                     <ul>
                         <li><b>Minimumsoppgaver for ungdomsbedrift (UB) i skoleåret</b></li>
                         <li>1 Registrere ungdomsbedrift, <br>2.Finne og registrere mentor,<br> 3.Utforme forretningsplan/modell, <br>4.Presentere for eksterne, <br>5.Føre regnskap, <br>6.Skrive årsrapport/levere revisjonsberetning</li>
-                        <li><b>Starte/prøve og feile/presentere</b></li>
+                        <li><b>Starte / prøve og feile / presentere</b></li>
                         <li>Ideutvikl, Forretningsidé, Jobbroller, Stiftelsesmøte /Registrere</li>
-                        <li><b>Drive/prøve og feile/presentere</b></li>
-                        <li>HR og ledelse, Økonomi, Forretningsmodell/canvas/plan, Mentor og nettverk, Bærekraft, Produktet, Produksjon, Markedsføring, Profilering og salg, Mesterskap</li>
-                        <li><b>Avslutte/videreføre/restarte/nystarte</b></li>
+                        <li><b>Drive / prøve og feile / presentere</b></li>
+                        <li>HR og ledelse, Økonomi, Forretningsmodell / canvas / plan, Mentor og nettverk, Bærekraft, Produktet, Produksjon, Markedsføring, Profilering og salg, Mesterskap</li>
+                        <li><b>Avslutte / videreføre / restarte / nystarte</b></li>
                         <li>Årsrapport, Revisjon, Generalforsamling, Avvikle, Attest, CV</li>
                         <li><b>Repetisjon og teori gjennomgang</b> slutten av skoleåret</li>
                     </ul>
