Ferdig alle sider justeres til skjermbredde. også kanskje en kjemi-løsning
løsningen i kjemi er å legge på en width:auto i håp om at bildet faktisk får en bredde

--- a/realfag/programfag/tekforsk/index.html
+++ b/realfag/programfag/tekforsk/index.html
@@ -161,7 +161,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../../script/footer.js"></script>
+    <!-- <script src="../../../script/footer.js"></script> -->
     <script src="../../../script/global.js"></script>
 </body>
 </html>
