Kjemi fungerer endelig!!!! :DDDDDD

--- a/realfag/programfag/kjemi/index.html
+++ b/realfag/programfag/kjemi/index.html
@@ -224,15 +224,15 @@
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_3.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_3.jpg" width="400px">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_4.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_4.jpg" width="400px">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_5.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_5.jpg" width="400px">
                     </div>
 
                     <!-- Next and previous buttons -->
